force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJob__c/fields/SOLXYZCSO001__DeliveryScheduleExecTime__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryScheduleExecTime__c</fullName>
    <label>配信実行時間</label>
    <length>32</length>
    <type>Text</type>
</CustomField>