force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJob__c/fields/SOLXYZCSO001__DeliveryScheduleName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryScheduleName__c</fullName>
    <label>スケジュール名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>