force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJob__c/fields/SOLXYZCSO001__JobCronId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__JobCronId__c</fullName>
    <label>Apex ジョブID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>